--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -20,11 +20,20 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@storybook/addon-essentials": "^7.6.3",
+    "@storybook/addon-interactions": "^7.6.3",
+    "@storybook/addon-links": "^7.6.3",
+    "@storybook/blocks": "^7.6.3",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/vue3": "^7.6.3",
+    "@storybook/vue3-webpack5": "^7.6.3",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.3.10",
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
@@ -34,9 +43,15 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
-  }
+    "sass-loader": "^12.0.0",
+    "storybook": "^7.6.3",
+    "vue-loader": "^17.3.1"
+  },
+  "packageManager": "yarn@4.0.2"
 }
